@@ -38,6 +38,23 @@ public class ReflectionHelpers {
         });
   }
 
+  public static <T> T createDelegatingProxy(Class<T> clazz, final Object delegate) {
+    final Class delegateClass = delegate.getClass();
+    return (T) Proxy.newProxyInstance(clazz.getClassLoader(),
+        new Class[]{clazz}, new InvocationHandler() {
+          @Override
+          public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+            try {
+              Method delegateMethod = delegateClass.getMethod(method.getName(), method.getParameterTypes());
+              delegateMethod.setAccessible(true);
+              return delegateMethod.invoke(delegate, args);
+            } catch (NoSuchMethodException e) {
+              return PRIMITIVE_RETURN_VALUES.get(method.getReturnType().getName());
+            }
+          }
+        });
+  }
+
   public static <A extends Annotation> A defaultsFor(Class<A> annotation) {
     return annotation.cast(
         Proxy.newProxyInstance(annotation.getClassLoader(), new Class[] { annotation },
@@ -269,6 +286,8 @@ public class ReflectionHelpers {
         throw (Error) e.getTargetException();
       }
       throw new RuntimeException(e.getTargetException());
+    } catch (NoSuchMethodException e) {
+      throw new RuntimeException("no such method " + clazz + "." + methodName, e);
     } catch (Exception e) {
       throw new RuntimeException(e);
     }
@@ -298,8 +317,9 @@ public class ReflectionHelpers {
    */
   public static <T> T newInstance(Class<T> cl) {
     try {
-      return cl.newInstance();
-    } catch (InstantiationException | IllegalAccessException e) {
+      return cl.getDeclaredConstructor().newInstance();
+    } catch (InstantiationException | IllegalAccessException | NoSuchMethodException
+        | InvocationTargetException e) {
       throw new RuntimeException(e);
     }
   }
@@ -352,12 +372,20 @@ public class ReflectionHelpers {
     }
   }
 
-  private static void makeFieldVeryAccessible(Field field) throws NoSuchFieldException, IllegalAccessException {
+  private static void makeFieldVeryAccessible(Field field) {
     field.setAccessible(true);
 
-    Field modifiersField = Field.class.getDeclaredField("modifiers");
-    modifiersField.setAccessible(true);
-    modifiersField.setInt(field, field.getModifiers() & ~Modifier.FINAL);
+    try {
+      Field modifiersField = Field.class.getDeclaredField("modifiers");
+      modifiersField.setAccessible(true);
+      try {
+        modifiersField.setInt(field, field.getModifiers() & ~Modifier.FINAL);
+      } catch (IllegalAccessException e) {
+        throw new RuntimeException(e);
+      }
+    } catch (NoSuchFieldException e) {
+      // ignore missing fields
+    }
   }
 
   public static Object defaultValueForType(String returnType) {
